Version 2.02.99 - 
===================================
  Fix vgextend to not allow a PV with 0 MDAs to be used while already in a VG.
  Move update_pool_params() from /tools to /lib for better reuse.
  Give precedence to EMC power2 devices with duplicate PVIDs.
  Add --validate option to lvm dumpconfig to validate current config on demand.
  Add --ignoreadvanced and --ignoreunsupported switch to lvm dumpconfig.
  Add --withcomments and --withversions switch to lvm dumpconfig.
  Add --type {current|default|missing|new} and --atversion to lvm dumpconfig.
  Support automatic config validation and add 'config' section to lvm.conf.
  Add pvs -o ea_start,ea_size to report embedding area start and size.
  Add --embeddingareasize to pvcreate and vgconvert to create an embedding area.
  Add PV header extension: extension version, flags and embedding areas.
  Initial support for lvconvert of thin external origin.
  Add _lv_remove_segs_using_this_lv() for removal of dependent lvs.
  Improve activation code for better support of stacked devices.
  Add _add_layer_target_to_dtree() for adding linear layer into dtree.
  Extend _cached_info() to accept layer string.
  Allow identical table reload for RAID to restore transiently failed PVs.
  vgimport '--force' now allows users to import VGs with missing PVs.
  Fix PV alignment to incorporate alignment offset if the PV has zero MDAs.
  Allow remove/replace of RAID sub-LVs that are composed of error targets.
  Make 'vgreduce --removemissing' able to handle RAID LVs with missing PVs.
  Rename lvm.conf setting 'mirror_region_size' to 'raid_region_size'.
  Fix pvs -o pv_free reporting for PVs with zero PE count.
  Fix missing cleanup of flags when the LV is detached from pool.
  Fix check for some forbidden discards conversion of thin pools.
  Add pool_is_active() to check for any pool related active LV.
  Report blank field if the LV doesn't have an origin instead of 0.